Vehicle Part Sync now working

--- a/ui/modules/multiplayer/direct.partial.html
+++ b/ui/modules/multiplayer/direct.partial.html
@@ -4,8 +4,8 @@
 
 	<div style="background:#2C2F33; padding-left:15px;">
 		<br />
-		<input type="text" id="directip" name="ip" placeholder="Server IP"/>
-		<input type="text" id="directport" name="port" placeholder="Server Port"/>
+		<input type="text" id="directip" name="ip" placeholder="Server IP" value="127.0.0.1"/>
+		<input type="text" id="directport" name="port" placeholder="Server Port" value="30814"/>
 		<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
 		<md-button id="direct-connect-button" class="button" ng-class="" ng-click="multiplayer.directConnect()">Connect</md-button>
 		<md-divider></md-divider>
