--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -13,6 +13,7 @@
 		<md-list-item layout class="md-padding" style="padding-top: 15px; padding-bottom: 0;">
 			<input type="text" id="search" name="search" placeholder="Search"/>
 			<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
+			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refresh()">Refresh</md-button>
 			<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>
 		</md-list-item>
 		<md-divider></md-divider>
