New Server list UI

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -8,6 +8,7 @@
     <!-- checks if the ui is loaded in an external browser and sets up communication via websocket to the game if that's the case -->
     <script src="entrypoints/main/setupCommunication.js"></script>
 
+    <script src="modules/multiplayer/js/jquery.min.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
 
     <!-- 3rd party includes -->
     <script src="lib/ext/angular.min.js"></script>
@@ -59,7 +60,9 @@
     <script src="modules/options/options.js"></script>
     <script src="modules/debug/debug.js"></script>
     <script src="modules/credits/credits.js"></script>
-	<script src="modules/multiplayer/multiplayer.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
+	  <script src="modules/multiplayer/multiplayer.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
+    <script src="modules/multiplayer/js/dataTables/jquery.dataTables.min.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
+    <!--<script src="modules/multiplayer/js/dataTables/dataTables.bootstrap.min.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
     <script src="modules/startScreen/startScreen.js"></script>
     <script src="modules/vehicleconfig/vehicleconfig.js"></script>
     <script src="modules/loading/loading.js"></script>
