--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -30,7 +30,16 @@
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
-
+			<tr>
+				<td colspan="5">
+						<center>Favorites</center>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="5">
+						<center>COMING SOON</center>
+				</td>
+			</tr>
 		</tbody>
 	</table>
 
