--- a/ui/modules/mainmenu/drive/mainmenu.html
+++ b/ui/modules/mainmenu/drive/mainmenu.html
@@ -27,7 +27,7 @@
 
     <md-grid-tile  md-rowspan="2" md-colspan="4" class="tile play other" ui-sref="menu.multiplayer" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" bng-nav-default-focus="true">
       <div layout="row" class="uppercase">
-        <span><md-icon class="material-icons mainmenuItems">sports_esports</md-icon>Play MP</span><br/>
+        <span><md-icon class="material-icons mainmenuItems">people_outline</md-icon> Play MP</span><br/>
       </div>
     </md-grid-tile>
 
