--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -24,6 +24,11 @@
                 Servers
             </md-button>
 
+            <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
+                <md-icon class="material-icons">star</md-icon>
+                Favorites
+            </md-button>
+
             <md-button id="direct-connect-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.direct') !== -1)}" ui-sref="menu.multiplayer.direct" style="text-align:left;">
                 <md-icon class="material-icons">web</md-icon>
                 Direct Connect
@@ -48,5 +53,6 @@
 </md-content>
 
 <!-- jQuery -->
-<script src="js/jquery.min.js"></script>
-<script>if (window.module) module = window.module;</script>
+<script>
+  if (window.module) module = window.module;
+</script>
