Latest Commit - FPS Improvement!

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -45,7 +45,7 @@
         </md-content>
 
         <div flex style="position: relative;">
-            <md-content ui-view class="container" style="background: transparent; overflow: auto;"></md-content>
+            <md-content ui-view class="container" style="background: transparent; overflow: auto; /*margin-bottom: 45px;*/"></md-content>
         </div>
 
         <div ui-view="edit" layout="column"></div>
