--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -14,6 +14,9 @@
 			<input type="text" id="search" name="search" placeholder="Search"/>
 			<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refresh()">Refresh</md-button>
+			<div>
+				<md-checkbox id="toggleOutdated" ng-change="multiplayer.toggleOutdated()">Show Outdated Servers</md-checkbox>
+			</div>
 			<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>
 		</md-list-item>
 		<md-divider></md-divider>
