removed random orange buttons

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -17,7 +17,7 @@
 			<div>
 				<md-checkbox id="toggleOutdated" ng-change="multiplayer.toggleOutdated()">Show Outdated Servers</md-checkbox>
 			</div>
-			<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>
+			<!--<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>-->
 		</md-list-item>
 		<md-divider></md-divider>
 	</div>
