--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -14,7 +14,7 @@
 			<input type="text" id="search" name="search" placeholder="Search"/>
 			<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refresh()">Refresh</md-button>
-			<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>
+			<!--<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">Connect</md-button>-->
 		</md-list-item>
 		<md-divider></md-divider>
 	</div>
