--- a/ui/modules/options/options.html
+++ b/ui/modules/options/options.html
@@ -69,7 +69,7 @@
         ng-class="{'md-primary md-raised': (options.stateName.indexOf('options.multiplayer') !== -1)}"
         ui-sref="menu.options.multiplayer"  style="text-align:left;">
         <md-icon class="material-icons">more_horiz</md-icon>
-        Multiplayer
+        {{:: 'ui.options.multiplayer' | translate}}
       </md-button>
 
       <div flex="" style="max-height: none;"></div>
