--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -31,7 +31,7 @@
              {{ :: 'ui.common.reset' | translate}}
           </md-button>
           <md-button ng-click="vehConf_parts.mpapply()" md-no-ink class="md-raised md-success">
-             {{ :: 'ui.common.apply' | translate}}
+             {{ :: 'ui.common.sync' | translate}}
           </md-button>
         </div>
       </md-content>
