--- a/ui/modules/vehicleconfig/partial.tuning.html
+++ b/ui/modules/vehicleconfig/partial.tuning.html
@@ -39,8 +39,8 @@
     </md-button>
 
     <md-button ng-click="vehConf_tuning.write()" ng-disabled="vehConf_tuning.liveVariablesUpdate"
-               class="md-raised md-primary" md-no-ink >
-      {{ :: 'ui.common.apply' | translate}}
+               class="md-raised md-success" md-no-ink >
+      {{ :: 'ui.common.apply' | translate}} & {{ :: 'ui.common.sync' | translate}}
     </md-button>
   </div>
 </md-content>
