--- a/ui/modules/vehicleselect/vehicleselect.html
+++ b/ui/modules/vehicleselect/vehicleselect.html
@@ -9,24 +9,25 @@
       <div style="margin: 8px">Vehicles</div>
       <div flex layout="row" layout-align="center center" layout-wrap>
 
-    <!--<md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
+    <!--<md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
+      <md-icon class="material-icons"  style="color:black;font:bold;">sd_storage</md-icon>
       {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
     </md-button>
-    <md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
-      Load default
+    <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
+      <md-icon class="material-icons"  style="color:black;font:bold;">folder_open</md-icon>
+      {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
     </md-button>-->
-    <!--<md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
-      Clone current
-    </md-button>-->
-    <md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
-      Remove current
+    <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
+      <md-icon class="material-icons"  style="color:black;font:bold;">content_copy</md-icon>
+      {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
     </md-button>
-    <!--<md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllVehicles()">
-      Remove all
-    </md-button>-->
-    <md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllExceptCurrentVehicle()">
+    <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
+      <md-icon class="material-icons"  style="color:black;font:bold;">delete</md-icon>
+      {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
+    </md-button>
+    <!--<md-button class="" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllExceptCurrentVehicle()">
       Remove others
-    </md-button>
+    </md-button>-->
 
       </div>
 
