smol bugfixes, removing prints

--- a/ui/modules/apps/BeamNG-MP-Session/app.html
+++ b/ui/modules/apps/BeamNG-MP-Session/app.html
@@ -1,6 +1,6 @@
 <div ng-controller="Session" id="Session" class="bngApp multiplayersession" ng-init="init()" ng-style="background-color: rgba(0, 0, 0, 0.5)">
   <div class="col col-wide">
-    <span><span id="Session-Status" style="text-overflow: ellipsis">Never connected - Please restart game</span></span>
+    <span><span id="Session-Status" style="text-overflow: ellipsis"></span></span>
   </div>
   <div class="col col-right">
     <span>Players: <span id="Session-PlayerCount">0/10</span></span>
