--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -9,19 +9,45 @@
 <script src="./modules/multiplayer/js/dataTables/dataTables.bootstrap.min.js"></script>-->
 
 <md-content>
-	<div>
-		<md-list-item layout class="md-padding" style="padding-top: 15px; padding-bottom: 0;">
+	<div layout="row" layout-padding="">
 			<input type="text" id="search" name="search" placeholder="Search" oninput="displayServers()"/>
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
 			<md-button id="addserver-button" class="button" ng-class="" style="margin-left:15px" ng-click="multiplayer.showCustomServer()">{{:: 'ui.multiplayer.addCustomServer' | translate}}</md-button>
-			
-			<input type="checkbox" id="check_hasPlayers" name="check_hasPlayers" style="margin-left:15px;" onclick="displayServers()"/>
-				<label for="check_hasPlayers" style="margin-right:15px; color: white;">Not empty</label>
-			<input type="checkbox" id="check_notFull" name="check_notFull" style="margin-left:15px;" onclick="displayServers()"/>
-				<label for="check_notFull" style="color: white;">Not full</label>
 
-			<md-button id="connect-button" class="button" ng-class="" ng-click="multiplayer.connect()">{{:: 'ui.multiplayer.connect' | translate}}</md-button>
-		</md-list-item>
+			<md-checkbox ng-model="multiplayermenu.check_isEmpty" ng-change="multiplayermenu.displayServers();">
+			<md-tooltip md-direction="right">
+			Only show empty servers
+			</md-tooltip md-no-ink>
+			Empty only
+			</md-checkbox>
+
+			<md-checkbox ng-model="multiplayermenu.check_isNotEmpty" ng-change="multiplayermenu.displayServers();">
+			<md-tooltip md-direction="right">
+			Only show not empty servers
+			</md-tooltip md-no-ink>
+			Not empty
+			</md-checkbox>
+
+			<md-checkbox ng-model="multiplayermenu.check_isNotFull" ng-change="multiplayermenu.displayServers();">
+			<md-tooltip md-direction="right">
+			Only show not full servers
+			</md-tooltip md-no-ink>
+			Not full
+			</md-checkbox>
+
+			<md-checkbox ng-model="multiplayermenu.check_modSlider" ng-change="multiplayermenu.displayServers();">
+			<md-tooltip md-direction="right">
+			Enable mod size limiter
+			</md-tooltip md-no-ink>
+			Mod size slider
+			</md-checkbox>
+
+			<md-slider flex ng-if="multiplayermenu.check_modSlider"
+				ng-model="multiplayermenu.slider_maxModSize" min="0" max="5000" step="50" aria-label="_"
+				ng-change="multiplayermenu.displayServers();">
+			</md-slider>
+			<span ng-if="multiplayermenu.check_modSlider" style="margin-left:15px">{{ multiplayermenu.slider_maxModSize }} MB</span>
+
 		<md-divider></md-divider>
 	</div>
 
