Fixed Deerbois mistakes

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -45,7 +45,7 @@
 				ng-model="multiplayermenu.slider_maxModSize" min="0" max="5000" step="50" aria-label="_"
 				ng-change="multiplayermenu.displayServers();">
 			</md-slider>
-			<span ng-if="multiplayermenu.check_modSlider" style="margin-left:15px">{{ multiplayermenu.slider_maxModSize }} MB</span>
+			<span ng-if="multiplayermenu.check_modSlider" style="margin: 0px 15px; padding-top: 13px; color: white;">{{ multiplayermenu.slider_maxModSize }} MB</span>
 
 		<md-divider></md-divider>
 	</div>
