Added UI option to enable auto part config change. (Temp Fix due to camera issue)

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -15,6 +15,11 @@
     <md-checkbox ng-model="options.data.values.nameTagShowDistance" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
+  <md-list-item md-no-ink>
+    <p>{{:: 'ui.options.multiplayer.syncConfigUpdates' | translate }}</p>
+    <md-checkbox ng-model="options.data.values.showSyncConfigUpdates" ng-change="options.applyState()"></md-checkbox>
+  </md-list-item>
+
 
 
   <md-subheader class="md-no-sticky">{{:: 'ui.options.multiplayer.others' | translate }}</md-subheader>
