Remove unneeded code

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -69,5 +69,5 @@
 
 <!-- jQuery -->
 <script>
-  if (window.module) module = window.module;
+  //if (window.module) module = window.module;
 </script>
