Added ability for custom chat resource to hide the default one.

--- a/ui/modules/apps/BeamNG-MP-Chat/app.html
+++ b/ui/modules/apps/BeamNG-MP-Chat/app.html
@@ -73,7 +73,7 @@ ng-init="init()">
   }
 </style>
 
-<div style="display:flex;">
+<div style="display:flex;" id="MainChatBoxWindow">
   <div style="margin-left:0px; margin-right resize:both; width:100%; min-height:100%;">
     <!--<div>
       <button style="height:30px; float:right;" ng-click="chatClear()">Clear Chat</button>
