Successfully rremoved jQuery + old files that arent needed.

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -67,6 +67,7 @@
 
 	<div id="footer">
 		<span id="TEMPAREA" style="display:none;"></span>
+		<span id="TEMPNODE" style="display:none;"></span>
 	</div>
 </md-content>
 
