more bits for better ui prep

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -130,7 +130,7 @@
   </div> -->
 
     <!--  .............. connection failed overlay ..............  -->
-    <div ng-if="app.showConnectionIssues" style="position:absolute; top:100px; right: 0; background:transparent; z-index:1000" class="md-padding">
+    <div ng-if="app.showConnectionIssues" id="showConnectionIssues" style="position:absolute; top:100px; right: 0; background:transparent; z-index:1000" class="md-padding">
       <span style="color: white; text-shadow: -3px 3px 15px #DB7B00, 3px -3px 15px #DB7B00;cursor: pointer;"  layout="column" layout-align="center center">
           <div style="font-weight: 500;font-size: 18px;text-shadow: 0px 0px 15px #000000, 0px 0px 15px #000000, 0px 0px 15px #000000;color: red;" layout="row" layout-align="center center">
             Connection Error! Please Rejoin the server.
