vehicleGE helper functions, pings, removed comments
getVehicleMap, getNicknameMap,
removed anons gearbox comments,
added pings in playerlist

--- a/ui/modules/apps/BeamNG-MP-PlayerList/app.html
+++ b/ui/modules/apps/BeamNG-MP-PlayerList/app.html
@@ -20,8 +20,8 @@
 		.tp-button {
 			color: white;
 			border: 0px;
-			//width: 25px;
-			//height: 155px;
+			width: 40px;
+			height: 24px;
 			//position: absolute;
 			//right: 0;
 			background-color: rgba(0, 0, 0, 0.5)
