--- a/ui/modules/mainmenu/drive/mainmenu.html
+++ b/ui/modules/mainmenu/drive/mainmenu.html
@@ -25,13 +25,17 @@
     </md-grid-tile>
 
 
-    <md-grid-tile  md-rowspan="2" md-colspan="4" class="tile play other" ui-sref="menu.multiplayer" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" bng-nav-default-focus="true">
+    <!--<md-grid-tile  md-rowspan="2" md-colspan="4" class="tile play other" ui-sref="menu.multiplayer" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" bng-nav-default-focus="true">
       <div layout="row" class="uppercase">
         <span><md-icon class="material-icons mainmenuItems">people_outline</md-icon> Play MP</span><br/>
       </div>
+    </md-grid-tile>-->
+
+    <md-grid-tile  md-rowspan="2" md-colspan="4" class="tile play other" ui-sref="menu.playmodes" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" bng-nav-default-focus="true">
+      <div layout="row" class="uppercase">
+        <span><md-icon class="material-icons mainmenuItems">layers</md-icon>{{ 'ui.mainmenu.play' | translate}}</span><br/>
+      </div>
     </md-grid-tile>
-
-
 
     <md-grid-tile md-rowspan="1" md-colspan="2" class="other tile" ui-sref="menu.options.graphics" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
       <div class="uppercase">
@@ -54,7 +58,7 @@
         <div ng-class="{'heading-long': (('ui.mainmenu.help' | translate).length) > 5}" class="heading" >{{ 'ui.mainmenu.help' | translate}}</div>
       </md-grid-tile>
 
-      <!--
+      <!-- Mod Manager -->
       <md-grid-tile md-colspan="2" class="other tile" ng-class="{'other tile smaller': total !== 0}" ui-sref="{{values.onlineFeatures === 'disable' ? 'menu.mods.local' : 'menu.mods.repository'}}"
         bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" ng-if="total > 0 || values.onlineFeatures !== 'disable'">
         <div class="blur-fg" layout="column" layout-align="center center" style="height: 100%; width: 100%">
@@ -63,7 +67,7 @@
           <span ng-if="total !== 0" style="font-size: 0.6em;" translate="ui.modmanager.numActive" translate-values="numActiveObj()"></span>
         </div>
       </md-grid-tile>
- -->
+
       <!--
       <md-grid-tile md-rowspan="1" md-colspan="2" class="other tile" ng-click="garage();" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
         <div class="uppercase">
@@ -75,18 +79,20 @@
 
 
 
-      <!-- <md-grid-tile md-colspan="2" class="tile other" ui-sref="menu.mods.repository" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
+      <!--
+      <md-grid-tile md-colspan="2" class="tile other" ui-sref="menu.mods.repository" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
         <div class="uppercase">
           {{ 'ui.mainmenu.repo' | translate}}
         </div>
       </md-grid-tile> -->
 
 
-      <!--<md-grid-tile md-colspan="2" class="other tile" ui-sref="menu.replay" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
+      <!-- Replay -->
+      <md-grid-tile md-colspan="2" class="other tile" ui-sref="menu.replay" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
         <div class="uppercase">
           {{ 'ui.dashboard.replay' | translate | uppercase}}
         </div>
-      </md-grid-tile>-->
+      </md-grid-tile>
 
     <!-- <md-grid-tile md-colspan="2" class="other tile" ui-sref="menu.modwizard" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}" ng-if="values.devMode">
       <div class="uppercase">
@@ -105,15 +111,8 @@
         {{ 'ui.mainmenu.exit' | translate}}
       </div>
     </md-grid-tile>
-	
-	
-	<md-grid-tile md-colspan="2" class="other tile" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
-      <a class="blur-fg" layout="column" layout-align="center center" style="height: 100%; width: 100%;" onclick="openForumLink()">
-        <span ng-class="{'heading-long': (('ui.mainmenu.news' | translate).length) > 5}" class="heading" >FORUM</span>
-      </a>
-    </md-grid-tile>
-	
-	
+
+
     <md-grid-tile ui-sref="iconViewer" ng-if="!app.shipping" md-colspan="1" class="other tile" bng-nav-item bng-sound="{focus: 'event:UI_MainMouseOver', click: 'event:UI_MainSelect'}">
       <div class="uppercase">
          Icons
